<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvHeightLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvHeightValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tvUndefined"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvHeight"
            app:layout_constraintTop_toTopOf="@+id/tvHeight"
            tools:text="0.1m" />

        <TextView
            android:id="@+id/tvWeightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUndefined"
            app:layout_constraintStart_toStartOf="@+id/tvHeightValue"
            app:layout_constraintTop_toBottomOf="@+id/tvHeightValue"
            tools:text="0.7 kg" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWeightLabel"
            app:layout_constraintEnd_toEndOf="@+id/tvHeight"
            app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

        <TextView
            android:id="@+id/tvPokedexEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeight"
            tools:text="The seed on its back is filled with nutrients. The seed grows steadily larger as its body grows." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

